...
import com.android.wildex.ui.navigation.NavigationTestTags
import com.android.wildex.ui.utils.ClickableProfilePicture
import com.android.wildex.ui.utils.offline.FriendsOfflineScreen
import com.android.wildex.ui.utils.refresh.WildexPullToRefreshIndicator

object FriendScreenTestTags {
  const val GO_BACK_BUTTON = "friend_screen_go_back_button"
  const val FRIENDS_TAB_BUTTON = "friends_tab_button"
  const val REQUESTS_TAB_BUTTON = "requests_tab_button"
  const val SCREEN_TITLE = "screen_title"
  const val NO_FRIENDS = "no_friends"
  const val NO_FRIENDS_TEXT = "no_friends_text"
  const val NO_SUGGESTIONS = "no_suggestions"
  const val NO_SENT_REQUESTS = "no_sent_requests"
  const val NO_RECEIVED_REQUESTS = "no_received_requests"
  const val PULL_TO_REFRESH = "pull_to_refresh"

  fun testTagForTemplate(userId: Id) = "template_$userId"

  fun testTagForProfilePicture(userId: Id) = "profile_picture_${userId}"

...
