...
import com.android.wildex.model.utils.Id
import com.android.wildex.ui.utils.ClickableProfilePicture

/** Test tags to assign to the different components of the search bar for testing purposes */
object SearchBarTestTags {
  const val TRAILING_ICON = "trailing_icon"
  const val SEARCH_BAR = "search_bar"
  const val INPUT_FIELD = "input_field"
  const val LEADING_ICON = "leading_icon"
  const val RESULT_LIST = "search_results"

  fun testTagForResult(userId: Id) = "result_$userId"

...
